remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -311,7 +311,7 @@
                 "description": "All recorded presentations collected",
                 "owner": "Alonna",
                 "project_name": "Global AppSec - Virtual",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-15",
