--- a/_data/projects.json
+++ b/_data/projects.json
@@ -14,7 +14,7 @@
                 "description": "Labor Day",
                 "owner": "No Owner",
                 "project_name": "OWASP Staff Holidays",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-11-03",
