remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -278,14 +278,14 @@
                 "description": "rite WEF article",
                 "owner": "Andrew",
                 "project_name": "Executive Director",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-08-14",
                 "description": "heck Secure Flag Pilot Launch",
                 "owner": "Andrew",
                 "project_name": "Executive Director",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-08-20",
