--- a/_data/projects.json
+++ b/_data/projects.json
@@ -522,21 +522,21 @@
                 "description": "All recorded presentations collected",
                 "owner": "Alonna",
                 "project_name": "Global AppSec - Virtual",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-15",
                 "description": "Virtual platform finalized",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Virtual",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-15",
                 "description": "Volunteers finalized and communication initiated",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Virtual",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-10-01",
@@ -574,7 +574,7 @@
                 "description": "Contract Packet Ready for Board Review",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-22",
@@ -634,7 +634,7 @@
                 "description": "Present items 1-3 for Board approval",
                 "owner": "Mike",
                 "project_name": "2020 Policy Review",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-10-19",
