remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -106,7 +106,7 @@
                 "description": "olunteers confirmed with schedule, registered and notification.",
                 "owner": "Lisa",
                 "project_name": "BlackHat Asia 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-25",
