--- a/_data/projects.json
+++ b/_data/projects.json
@@ -638,7 +638,7 @@
             },
             {
                 "milestone_date": "2020-10-19",
-                "description": "Present items 4-14 for Board approval",
+                "description": "Present items 4-9 for Board approval",
                 "owner": "Mike",
                 "project_name": "2020 Policy Review",
                 "status": "future"
@@ -651,7 +651,7 @@
                 "status": "future"
             }
         ],
-        "description": "tle: 2020 Policy Reviewlayout: full-width---",
+        "description": "tle: 2020 Policy Reviewlayout: full-width---**TImeline Modified 18-August-2020**",
         "leaders": [
             {
                 "name": "Mike McCamon",
